# fx_vol_regime

./: pyproject.toml
data/processed/: fx_spots.csv  historic_vol.csv  log_returns.csv
data/raw/: fx_spots.csv
data/results/: ML_models.csv  backtests_AUD.csv  backtests_CHF.csv  backtests_EUR.csv  backtests_GBP.csv  backtests_JPY.csv  baselines.csv  ret_eur.csv
notebooks/: 01_data_exploration.ipynb  02_darts_forecasts.ipynb  97_strategy_tests.ipynb  98_forecasts_tests.ipynb
scripts/: backtest_ML.py  backtest_baselines.py  baselines.py  clean_data.py  data_comps.py  get_backtest_results.py  get_data.py  get_strat_results.py
src/fxvol/: ML_models.py  backtest.py  baseline_models.py  checks.py  data_utils.py  fin_comp.py  models.py  strategy.py  volatility.py
