[project]
name = "fx-vol-regime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "darts>=0.40.0",
    "jupyter>=1.1.1",
    "llvmlite>=0.41.0",
    "numba>=0.58",
    "statsforecast>=2.0.3",
    "xgboost>=3.1.3",
    "yfinance>=1.1.0",
]

[tool.uv]
package = true
